Customer apis documentation
